@@ -67,7 +67,7 @@ tpkg report
 
 do_long=yes
 if [ $do_long = yes ]; then
-	LONGTESTS="testplan_axfr.tpkg testplan_ixfr_pkts.tpkg testplan_mess.tpkg testplan_axfr_tsig.tpkg testplan_ixfr_remove.tpkg testplan_timeout.tpkg testplan_deadlock.tpkg testplan_ixfr.tpkg testplan_tsig_34.tpkg bug_sighup.tpkg ixfr_rollback.tpkg reload_timeout.tpkg xfrd_connect_ip6.tpkg xfrd_tcp_overload.tpkg notify_interrupts_axfr.tpkg bug137.tpkg bug145_multiple_zone_xfr.tpkg ixfr_malformed.tpkg ixfr_remove_unknown.tpkg socket10kxfr.tpkg"
+	LONGTESTS="testplan_axfr.tpkg testplan_ixfr_pkts.tpkg testplan_mess.tpkg testplan_axfr_tsig.tpkg testplan_ixfr_remove.tpkg testplan_timeout.tpkg testplan_deadlock.tpkg testplan_ixfr.tpkg testplan_tsig_34.tpkg ixfr_rollback.tpkg reload_timeout.tpkg xfrd_connect_ip6.tpkg xfrd_tcp_overload.tpkg notify_interrupts_axfr.tpkg bug137.tpkg bug145_multiple_zone_xfr.tpkg ixfr_malformed.tpkg ixfr_remove_unknown.tpkg socket10kxfr.tpkg"
 	cd long
 	for i in $LONGTESTS; do
 		echo ">>> next test $i at "`date`
